promgrafanaingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: mon-ingress
 namespace: monitoring
 annotations:
  #  cert-manager.io/cluster-issuer: letsencrypt-production
   cert-manager.io/cluster-issuer: letsencrypt-staging
   kubernetes.io/tls-acme: "true"
   acme.cert-manager.io/http01-edit-in-place: "true"
   nginx.ingress.kubernetes.io/ssl-passthrough: "true"
   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
 ingressClassName: nginx
 tls:
   - hosts:
       - "dig.cessmedia.com"
     secretName: dig.cessmedia.com
 rules:
   - host: "dig.cessmedia.com"
     http:
       paths:
         - path: /grafana(/|$)(.*)
           pathType: Rewrite
           backend:
             service:
               name: kube-prometheus-stack-grafana
               port:
                 number: 80
